Add `files` to `package.json`

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "license": "ISC",
+  "files": [
+    "lib/**/*"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/maxswa/nookipedia-api.git"
