Add `publishConfig` to `package.json`

--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "nookipedia",
     "api"
   ],
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "author": "maxswa",
   "scripts": {
     "build": "tsc",
