--- a/package.json
+++ b/package.json
@@ -102,6 +102,7 @@
     "np": "^7.6.3",
     "prettier": "^2.8.4",
     "ts-jest": "^29.0.5",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "yaml": "^2.2.1"
   }
 }
