Update OpenAPI spec.

--- a/nookipedia-api.yaml
+++ b/nookipedia-api.yaml
@@ -2,7 +2,7 @@ openapi: 3.0.0
 info:
   title: Nookipedia
   description: 'The Nookipedia API provides endpoints for retrieving *Animal Crossing* data pulled from the [Nookipedia wiki](https://nookipedia.com/wiki/Main_Page). A couple of the key benefits of using the Nookipedia API is access to data spanning the entire *Animal Crossing* series, as well as information that is constantly updated and expanding as editors work on the wiki.<br><br>Access to the Nookipedia API requires obtaining a key. This is so we can manage our scale and provide better support for our users. To request access to the API, please fill out [this form](https://forms.gle/wLwtXLerKhfDrRLY8).'
-  version: 1.6.0
+  version: 1.6.1
 servers:
   - url: 'https://api.nookipedia.com/'
 paths:
@@ -2098,6 +2098,10 @@ components:
               type: string
               example: ''
               description: 'Any notes about the villager''s music. If populated, this is usually "Does not contain a stereo initially", meaning that the villager''s house will not play music unless provided with a stereo.'
+            umbrella:
+              type: string
+              example: bat umbrella
+              description: The name of the umbrella used by the villager.
     NHFish:
       type: object
       properties:
